<resources>


    <string name="app_name">Kora Lite</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="ended">منتهية</string>
    <string name="current">جارية حاليا</string>
    <string name="coming">قادمة</string>
    <string name="matches">المباريات</string>
    <string name="departments">البطولات</string>
    <string name="news">الأخبار</string>
    <string name="players">ترتيب الهدافين</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="rate_app">تقييم التطبيق</string>
    <string name="player_assist">(مساعد)</string>
    <string name="goal">هدف</string>
    <string name="yellow_card">بطاقة صفراء</string>
    <string name="red_card">بطاقة حمراء</string>
    <string name="subst">استبدال</string>
    <string name="goal_cancelled">إلغاء الهدف</string>
    <string name="penalty_confirmed">ضربة جزاء</string>
    <string name="normal_goal">هدف عادي</string>
    <string name="own_goal">هدف في مرماه</string>
    <string name="penalty">هدف (ضربة جزاء)</string>
    <string name="missed_penalty2">ضربة جزاء ضائعة</string>
    <string name="postponed">مباراة مؤجلة</string>
    <string name="canceled">مباراة ملغاة</string>
    <string name="tobedefined">الوقت غير محدد</string>


    <array name="days">
        <item>الأحد</item>
        <item>الاثنين</item>
        <item>الثلاثاء</item>
        <item>الأربعاء</item>
        <item>الخميس</item>
        <item>الجمعة</item>
        <item>السبت</item>
    </array>

    <array name="match_tabs">
        <item>أحداث المبارات</item>
        <item>التفاصيل</item>
        <item>المدرجات</item>
        <!--<item>فيديو</item>-->
        <!--<item>الأخبار</item>-->
        <item>الترتيب</item>
        <item>الهدافون</item>
    </array>

    <array name="player_tabs">
        <item>الترتيب</item>
        <item>المباريات</item>
        <item>التفاصيل</item>
    </array>

    <array name="team_info_tabs">
        <item>اللاعبون</item>
        <item>الترتيب</item>
        <item>المباريات</item>
    </array>

    <array name="timeline_types">
        <item>هدف</item>
        <item>مشاهدة</item>
        <item>هدف في مرماه</item>
        <item>ضربة جزاء ناجهة</item>
        <item>ضربة جزاء فاشلة</item>
        <item>بطاقة صفراء</item>
        <item>بطاقة حمراء</item>

    </array>
    <string name="title_activity_match">MatchActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_match_acitivity">MatchAcitivity</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=com.app_republic.shoot</string>
    <string name="department">البطولة</string>
    <string name="role">الجولة</string>
    <string name="stadium">ملعب المباراة</string>
    <string name="channel">القناة الناقلة</string>
    <string name="commentator">المعلق</string>
    <string name="match_time">وقت المباراة</string>
    <string name="match_date">تاريخ المباراة</string>
    <string name="end_half_time">نهاية الشوط الأول</string>
    <string name="end_match">نهاية المباراة</string>

    <string name="match_state_finished">منتهية</string>
    <string name="match_state_coming">قادمة</string>
    <string name="match_state_live">جارية</string>
    <string name="scored_penalty">ضربات جزاء ناجحة</string>
    <string name="missed_penalty">ضربات جزاء ضائعة</string>
    <string name="goals">الأهداف</string>
    <string name="red_cards">البطاقات الحمراء</string>
    <string name="yellow_cards">البطاقات الصفراء</string>
    <string name="goals_against">أهداف في مرماه</string>
    <string name="year">سنة</string>
    <string name="games">ألعاب</string>
    <string name="comments">تعليقات</string>
    <string name="field_required">هذا الحقل اجباري</string>
    <string name="password_error">كلمة المرور يجب أن تحتوي 6 أحرف على الأقل</string>
    <string name="password_error_repeat">كلمة السر غير مطابقة</string>
    <string name="email_error">الاميل غير صحيح</string>
    <string name="signed_up_success">تم التسجيل بنجاح</string>
    <string name="login_now">الدخول</string>
    <string name="password_repeat">اعادة كلمة المرور</string>
    <string name="password">كلمة المرور</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="email">البريد الالكتروني</string>
    <string name="signup">التسجيل</string>
    <string name="facebook">الدخول بواسطة فيسبوك</string>
    <string name="google">الدخول بواسطة جوجل</string>
    <string name="login">الدخول</string>
    <string name="new_account">حساب جديد</string>
    <string name="uploading_photo">جاري تحميل الصورة</string>
    <string name="login_user">تسجيل الدخول</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="continu">continue</string>

    <string name="facebook_app_id" translatable="false">1403270009852922</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1403270009852922</string>
    <string name="google_login_app_id" translatable="false">1000558491875-3jhsc9on8c7obbei47egg8mqi04bv8dr.apps.googleusercontent.com</string>
    <string name="have_to_login">يجب عليك تسجيل الدخول</string>
    <string name="facebook_page">صفحة الفيسبوك</string>
    <string name="website">الموقع الالكتروني</string>
    <string name="chat">chat دردشة</string>
    <string name="add_comment">أضف تعليق</string>
    <string name="default_notification_channel_id" translatable="false">main_channel</string>
    <string name="predict_result">توقع الفائز</string>
    <string name="live_stream">الفيديو</string>
    <string name="group">المجموعة</string>

    <string name="goals_assist">مساعدة لتسجيل هدف</string>


    <string name="defender">مدافع</string>
    <string name="goalkeeper">حارس مرمى</string>
    <string name="midfielder">لاعب خط وسط</string>
    <string name="attacker">مهاجم</string>


</resources>
