<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/ic_calendar"
            android:title="@string/matches" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/news"
            android:visible="false"
             />
        <item
            android:id="@+id/nav_departments"
            android:icon="@drawable/ic_trophy"
            android:title="@string/departments" />
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_person"
            android:title="@string/players" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/ic_games"
            android:title="@string/games" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_account_small"
                android:title="@string/login_user" />

            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook_white"
                android:title="@string/facebook_page" />

            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_web_site"
                android:title="@string/website" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_rate_app"
                android:icon="@drawable/ic_star"
                android:title="@string/rate_app" />
        </menu>
    </item>


</menu>
